// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiCommentTimeline is rendered 1`] = `
<div
  class="euiCommentTimeline testClass1 testClass2"
>
  <div
    class="euiCommentTimeline__content"
  >
    <div
      class=""
    >
      <div
        aria-label="someuser"
        class="euiAvatar euiAvatar--m euiAvatar--user"
        role="img"
        style="background-color:#c47c6c;color:#000000"
        title="someuser"
      >
        <span
          aria-hidden="true"
        >
          s
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiCommentTimeline props timelineIcon is rendered 1`] = `
<div
  class="euiCommentTimeline"
>
  <div
    class="euiCommentTimeline__content"
  >
    <div
      class=""
    >
      <div
        aria-label="Mario"
        class="euiAvatar euiAvatar--l euiAvatar--user"
        role="img"
        style="background-color:#f1d86f;color:#000000"
        title="Mario"
      >
        <span
          aria-hidden="true"
        >
          M
        </span>
      </div>
    </div>
  </div>
</div>
`;
